--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "gatsby": "^2.24.85",
+    "gatsby-source-filesystem": "^2.3.37",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-vertical-timeline-component": "^3.3.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
