--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "awesome-cv",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "author": "Carl Elgestad Stjernfeldt",
+  "description": "A awesome CV / portfolio website",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
