--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   },
   "dependencies": {
     "gatsby": "^2.24.85",
+    "gatsby-image": "^2.4.21",
+    "gatsby-plugin-sharp": "^2.7.1",
     "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-transformer-json": "^2.4.15",
+    "gatsby-transformer-sharp": "^2.5.21",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-vertical-timeline-component": "^3.3.1"
