Rename Github repo name
Split page query to static queries in components

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesome-cv",
+  "name": "awesome-gatsby-cv",
   "private": true,
   "author": "Carl Elgestad Stjernfeldt",
   "description": "A awesome CV / portfolio website",
