--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.24.85",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-sharp": "^2.7.1",
+    "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-source-filesystem": "^2.3.37",
     "gatsby-transformer-json": "^2.4.15",
     "gatsby-transformer-sharp": "^2.5.21",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-vertical-timeline-component": "^3.3.1"
+    "react-vertical-timeline-component": "^3.3.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "2.1.2"
