--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.4.2",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-sharp": "^2.7.1",
-    "gatsby-plugin-styled-components": "^3.5.0",
-    "gatsby-source-filesystem": "^2.3.37",
-    "gatsby-transformer-json": "^2.4.15",
-    "gatsby-transformer-sharp": "^2.5.21",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "gatsby-image": "^3.4.0",
+    "gatsby-plugin-sharp": "^3.4.2",
+    "gatsby-plugin-styled-components": "^4.4.0",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-json": "^3.4.0",
+    "gatsby-transformer-sharp": "^3.4.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-vertical-timeline-component": "^3.3.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "prettier": "^2.2.1"
   },
   "repository": {
     "type": "git",
